--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -7,7 +7,9 @@
   overflow-x: hidden;
   overflow-y: auto;
   color: $black_text;
-  background: $white_text;
+  background: $black url('../img/bg.jpg') no-repeat right center;
+  background-size: cover;
+  background-attachment: fixed;
   &.locked {
     overflow-y: hidden;
   }
@@ -15,27 +17,35 @@
 
 .main {
   width: 100%;
+  position: relative;
 }
 
 .section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  position: relative;
   width: 100%;
+  height: auto;
+  min-height: 100vh;
+  padding: 110px 0px;
+  box-sizing: border-box;
+  @media screen and (max-width: 767px) {
+    padding: 110px 0px 40px 0px;
+  }
 }
 
 .container {
-  display: flex;
+  display: block;
   position: relative;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   margin: 0 auto;
-
-  @media screen and (min-width: 1280px) {
-    max-width: 1080px;
-  }
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
-    max-width: 704px;
-  }
+  max-width: 500px;
   @media screen and (max-width: 767px) {
-    max-width: 375px;
     padding: 0px 20px;
   }
 }
