--- a/src/sass/_refs.scss
+++ b/src/sass/_refs.scss
@@ -1,9 +1,10 @@
-$color: #6d89b3;
-$color_hover: #4097a7;
-$balck: #000000;
+$color: #004e83;
+$color_hover: #1068a3;
+$black: #000000;
 $white: #ffffff;
 $black_text: #050505;
 $white_text: #f8f8f8;
+$gray10: rgba(5, 5, 5, 0.1);
 $gray20: rgba(5, 5, 5, 0.2);
 $gray30: rgba(5, 5, 5, 0.3);
 $gray50: rgba(5, 5, 5, 0.5);
