--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,15 +2,9 @@
 @import './reset';
 @import './animations';
 @import './fonts';
-@import './popup';
-@import './form';
 @import './typography';
 @import './body';
 @import './buttons';
-@import './header';
-@import './hero';
-@import './footer';
-@import './components/navigation';
-@import './components/burger';
-@import './components/theme-switcher';
 @import './components/preloader';
+@import './components/navigation';
+@import './components/step';
