--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -33,7 +33,7 @@ $button_border_border: 1px solid $color;
 $button_border_border_hover: 1px solid $color;
 $button_border_background: rgba(0, 0, 0, 0);
 $button_border_background_hover: $color;
-$button_border_color: $black_text;
+$button_border_color: $black;
 $button_border_color_hover: $white_text;
 
 /*button--gray*/
