--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -16,9 +16,9 @@ $button_height_tablet: 48px;
 $button_fontsize_tablet: 14px;
 $button_padding_tablet: 8px 28px;
 /*mobil*/
-$button_height_mobil: 38px;
-$button_fontsize_mobil: 14px;
-$button_padding_mobil: 8px 20px;
+$button_height_mobil: auto;
+$button_fontsize_mobil: 12px;
+$button_padding_mobil: 18px 20px;
 /*big*/
 $button_big_height: 70px;
 $button_big_fontsize: 20px;
