--- a/src/sass/components/_step.scss
+++ b/src/sass/components/_step.scss
@@ -8,6 +8,9 @@
     color: $white;
     text-align: center;
     margin-bottom: 40px;
+    @media screen and (max-width: 375px) {
+      margin-bottom: 20px;
+    }
   }
   .button {
     min-width: 150px;
